RESOLVED FIXED189530
[Curl] Bug fix on some inaccurate values in NetworkLoadMetrics.
https://bugs.webkit.org/show_bug.cgi?id=189530
Summary [Curl] Bug fix on some inaccurate values in NetworkLoadMetrics.
Basuke Suzuki
Reported 2018-09-11 16:47:06 PDT
The timing information curl returns is calculated based on the curl_ease_perform(), which is invoked in background thread. The real metrics should be started at the timing of request handler (CurlRequest) started timing.
Attachments
PATCH (14.28 KB, patch)
2018-09-14 15:17 PDT, Basuke Suzuki
no flags
PATCH (14.34 KB, patch)
2018-09-14 15:31 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2018-09-14 15:17:47 PDT
Created attachment 349815 [details] PATCH responseEnd was implemented correctly. Also initial delay caused by the gap from main thread to curl thread was adjusted.
Basuke Suzuki
Comment 2 2018-09-14 15:31:13 PDT
WebKit Commit Bot
Comment 3 2018-09-14 17:46:54 PDT
Comment on attachment 349819 [details] PATCH Clearing flags on attachment: 349819 Committed r236029: <https://trac.webkit.org/changeset/236029>
WebKit Commit Bot
Comment 4 2018-09-14 17:46:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-09-14 17:47:38 PDT
Note You need to log in before you can comment on or make changes to this bug.