Source/WebCore/platform/network/curl/ResourceHandleCurl.cpp
@@ -81,11 +81,14 @@ bool ResourceHandle::start()
         return true;
     }
 
+    d->m_startTime = MonotonicTime::now();
+
     d->m_curlRequest = createCurlRequest(WTFMove(request));
 
     if (auto credential = getCredential(d->m_firstRequest, false))
         d->m_curlRequest->setUserPass(credential->first, credential->second);
 
+    d->m_curlRequest->setStartTime(d->m_startTime);
     d->m_curlRequest->start();
 
     return true;
@@ -375,6 +378,7 @@ void ResourceHandle::restartRequestWithCredential(const String& user, const Stri
 
     d->m_curlRequest = createCurlRequest(WTFMove(previousRequest), RequestStatus::ReusedRequest);
     d->m_curlRequest->setUserPass(user, password);
+    d->m_curlRequest->setStartTime(d->m_startTime);
     d->m_curlRequest->start();
 }
 
@@ -388,6 +392,7 @@ void ResourceHandle::platformLoadResourceSynchronously(NetworkingContext* contex
     bool shouldContentEncodingSniff = true;
     RefPtr<ResourceHandle> handle = adoptRef(new ResourceHandle(context, request, &client, defersLoading, shouldContentSniff, shouldContentEncodingSniff));
     handle->d->m_messageQueue = &client.messageQueue();
+    handle->d->m_startTime = MonotonicTime::now();
 
     if (request.url().protocolIsData()) {
         handle->handleDataURL();
@@ -396,6 +401,7 @@ void ResourceHandle::platformLoadResourceSynchronously(NetworkingContext* contex
 
     auto requestCopy = handle->firstRequest();
     handle->d->m_curlRequest = handle->createCurlRequest(WTFMove(requestCopy));
+    handle->d->m_curlRequest->setStartTime(handle->d->m_startTime);
     handle->d->m_curlRequest->start();
 
     do {
@@ -483,6 +489,7 @@ void ResourceHandle::willSendRequest()
         // in a cross-origin redirect, we want to clear those headers here. 
         newRequest.clearHTTPAuthorization();
         newRequest.clearHTTPOrigin();
+        d->m_startTime = WTF::MonotonicTime::now();
     }
 
     ResourceResponse responseCopy = delegate()->response();
@@ -513,6 +520,7 @@ void ResourceHandle::continueAfterWillSendRequest(ResourceRequest&& request)
     if (shouldForwardCredential && credential)
         d->m_curlRequest->setUserPass(credential->first, credential->second);
 
+    d->m_curlRequest->setStartTime(d->m_startTime);
     d->m_curlRequest->start();
 }
 
