Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.h
@@ -89,6 +89,7 @@ private:
     unsigned m_authFailureCount { 0 };
     bool m_didChallengeEmptyCredentialForAuth { false };
     bool m_didChallengeEmptyCredentialForProxyAuth { false };
+    MonotonicTime m_startTime;
 };
 
 } // namespace WebKit
